// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account.create returns new account action on empty current state 1`] = `
Object {
  "account": "eosio",
  "authorization": Array [
    Object {
      "actor": "accntmngr",
      "permission": "active",
    },
  ],
  "data": Object {
    "active": Object {
      "accounts": Array [
        Object {
          "permission": Object {
            "actor": "dapptoken",
            "permission": "eosio.code",
          },
          "weight": 1,
        },
      ],
      "keys": Array [
        Object {
          "key": "EOS5nYs7LDcFcVtFmnYrhYQv9Z8DPDd1r4MJ8na2MvcPPJkXwzM3x",
          "weight": 1,
        },
      ],
      "parent": "owner",
      "threshold": 2,
      "waits": Array [
        Object {
          "wait_sec": 600,
          "weight": 1,
        },
      ],
    },
    "creator": "accntmngr",
    "name": "test",
    "owner": Object {
      "accounts": Array [],
      "keys": Array [
        Object {
          "key": "EOS6z98haKv12d8vAJbDUkXmpK3PaKvf3Dv1NApo9MCxJ8oNWssDi",
          "weight": 1,
        },
      ],
      "parent": "",
      "threshold": 1,
      "waits": Array [],
    },
  },
  "name": "newaccount",
}
`;

exports[`account.updateAuth returns no actions to run when used on same unordered permissions 1`] = `null`;

exports[`account.updateAuth returns updateauth action when used with new permission 1`] = `
Array [
  Object {
    "account": "eosio",
    "authorization": Array [
      Object {
        "actor": "test",
        "permission": "owner",
      },
    ],
    "data": Object {
      "account": "test",
      "auth": Object {
        "accounts": Array [],
        "keys": Array [
          Object {
            "key": "EOS6z98haKv12d8vAJbDUkXmpK3PaKvf3Dv1NApo9MCxJ8oNWssDi",
            "weight": 1,
          },
          Object {
            "key": "EOS7uSfs552n9hN1U2vidQybeP6dqx2V4qLEB5BdtEGPM3kyhGDnd",
            "weight": 1,
          },
        ],
        "parent": "",
        "threshold": 1,
        "waits": Array [],
      },
      "parent": "",
      "permission": "owner",
    },
    "name": "updateauth",
  },
  Object {
    "account": "eosio",
    "authorization": Array [
      Object {
        "actor": "test",
        "permission": "owner",
      },
    ],
    "data": Object {
      "account": "test",
      "auth": Object {
        "accounts": Array [
          Object {
            "permission": Object {
              "actor": "dapptoken",
              "permission": "eosio.code",
            },
            "weight": 1,
          },
        ],
        "keys": Array [
          Object {
            "key": "EOS5nYs7LDcFcVtFmnYrhYQv9Z8DPDd1r4MJ8na2MvcPPJkXwzM3x",
            "weight": 1,
          },
          Object {
            "key": "EOS84UkWvuV4tM8s7ose5wwF8MReUVBCwtSJHUFMdUxBu2B2cTm32",
            "weight": 1,
          },
        ],
        "parent": "owner",
        "threshold": 3,
        "waits": Array [
          Object {
            "wait_sec": 600,
            "weight": 1,
          },
        ],
      },
      "parent": "owner",
      "permission": "active",
    },
    "name": "updateauth",
  },
  Object {
    "account": "eosio",
    "authorization": Array [
      Object {
        "actor": "test",
        "permission": "owner",
      },
    ],
    "data": Object {
      "account": "test",
      "auth": Object {
        "accounts": Array [
          Object {
            "permission": Object {
              "actor": "test",
              "permission": "active",
            },
            "weight": 1,
          },
        ],
        "keys": Array [],
        "parent": "owner",
        "threshold": 2,
        "waits": Array [
          Object {
            "wait_sec": 1200,
            "weight": 1,
          },
        ],
      },
      "parent": "owner",
      "permission": "newnewnew",
    },
    "name": "updateauth",
  },
]
`;

exports[`account.updateRam returns no actions to run when enough RAM 1`] = `null`;

exports[`account.updateRam returns updateRam action when used with new permission 1`] = `
Object {
  "account": "eosio",
  "authorization": Array [
    Object {
      "actor": "rammngr",
      "permission": "active",
    },
  ],
  "data": Object {
    "bytes": 154793,
    "payer": "rammngr",
    "receiver": "test",
  },
  "name": "buyrambytes",
}
`;
